# cardano-faucet

./: .envrc  .gitignore  README.md  cabal.project  flake.nix  release.nix  shard.yml  shell.nix
cardano-faucet/: cardano-faucet.cabal
cardano-faucet/src/Cardano/: Faucet.hs
cardano-faucet/src/Cardano/Faucet/: Misc.hs  TxUtils.hs  Types.hs  Utils.hs  Web.hs
examples/: envrc  faucet.apikey-example
nix/: default.nix  packages.nix  sources.json
nix/nixos/: cardano-faucet-options.nix  cardano-faucet-service-with-node.nix  cardano-faucet-service.nix  module-list.nix
nix/nixos/create-faucet-wallet/: create-faucet-wallet.sh  default.nix
nix/nixos/tests/: default.nix  simple.nix
spec/: cardano-faucet_spec.cr  spec_helper.cr
src/: cardano-faucet.cr  cardano-module.cr  general.cr  setup.cr
