cabal-version: 3.0

name:                   cardano-faucet
version:                8.3
description:            The Cardano command-line interface.
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-source-files:     README.md
data-dir:             data
data-files:           index.html

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Wno-orphans
                        -Wno-deprecations

common maybe-unix
  if !os(windows)
     build-depends:    unix

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      Cardano.Faucet

  other-modules:        Cardano.Faucet.Misc
                        Cardano.Faucet.TxUtils
                        Cardano.Faucet.Types
                        Cardano.Faucet.Utils
                        Cardano.Faucet.Web
                        Paths_cardano_faucet

  build-depends:        aeson             >= 1.5.6.0
                      , MissingH
                      , bytestring
                      , cardano-addresses
                      , cardano-api
                      , cardano-cli ^>= 8.6.1.0
                      , cardano-ledger-alonzo
                      , cardano-ledger-byron
                      , cardano-ledger-binary
                      , cardano-ledger-core
                      , cardano-ledger-conway
                      , cardano-ledger-shelley
                      , cardano-prelude
                      , containers
                      , either
                      , formatting
                      , http-api-data
                      , http-client-tls
                      , http-media
                      , iproute
                      , network
                      , ouroboros-consensus
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-protocol ^>= 0.5
                      , ouroboros-network-api
                      , ouroboros-network ^>= 0.8.2.0
                      , ouroboros-network-framework ^>= 0.7
                      , ouroboros-network-protocols
                      , parsec
                      , servant-client
                      , servant-server
                      , split
                      , stm
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , warp

executable cardano-faucet
  import:               base, project-config
  main-is:              cardano-faucet.hs
  build-depends:        cardano-faucet
  ghc-options:          -threaded
