cabal-version: 3.0

name:                   cardano-faucet
version:                10.1
description:            The Cardano command-line interface.
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-source-files:     README.md
data-dir:             data
data-files:           index.html

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Werror
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Wno-orphans
                        -Wno-deprecations

common maybe-unix
  if !os(windows)
     build-depends:    unix

library
  import:               base, project-config

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      Cardano.Faucet

  other-modules:        Cardano.Faucet.Misc
                        Cardano.Faucet.TxUtils
                        Cardano.Faucet.Types
                        Cardano.Faucet.Utils
                        Cardano.Faucet.Web
                        Paths_cardano_faucet

  build-depends:        aeson              >= 1.5.6.0
                      , MissingH
                      , bytestring
                      , cardano-addresses ^>= 3.12.0
                      , cardano-api       ^>= 10.1.0.0
                      , cardano-cli
                      , cardano-prelude
                      , containers
                      , either
                      , formatting
                      , http-api-data
                      , http-client-tls
                      , http-media
                      , iproute
                      , network
                      , ouroboros-consensus
                      , ouroboros-network-protocols
                      , parsec
                      , protolude
                      , servant-client
                      , servant-server
                      , split
                      , stm
                      , text
                      , time
                      , transformers-except
                      , warp

executable cardano-faucet
  import:               base, project-config
  main-is:              cardano-faucet.hs
  build-depends:        cardano-faucet
  ghc-options:          -threaded
